--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Browser LLM Evaluation</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -14,25 +14,40 @@
         <!-- Cloud Card -->
         <div class="bg-white p-6 rounded-2xl shadow-xl border border-gray-200">
             <h2 class="text-xl font-semibold mb-4">Cloud (OpenRouter)</h2>
-            <label class="block mb-4 text-sm font-medium">API Key
-                <input id="cloudApiKey" type="text" placeholder="Key..." class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none" />
+            <label class="block mb-4 text-sm font-medium">Model
+                <select id="cloudModel"
+                        class="w-full mb-4 px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
+                    <option value="openai/gpt-4o-mini">openai/gpt-4o-mini</option>
+                </select>
             </label>
-            <select id="cloudModel" class="w-full mb-4 px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
-                <option value="openai/gpt-4o-mini">openai/gpt-4o-mini</option>
-            </select>
+
+            <label class="block mb-4 text-sm font-medium">API Key OpenRouter
+                <input id="cloudApiKey" type="text" placeholder="Key..."
+                       class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none"/>
+            </label>
+
+
 
         </div>
 
         <!-- On-Device Card -->
         <div class="bg-white p-6 rounded-2xl shadow-xl border border-gray-200">
             <h2 class="text-xl font-semibold mb-4">On-Device</h2>
-            <label class="block mb-4 text-sm font-medium">Model (transformers.js)
-                <input id="deviceModel" value="Xenova/distilgpt2" class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none" />
+
+            <label class="block text-sm font-medium">Model (transformers.js)
+                <select id="deviceModel"
+                        class="w-full mb-2 px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
+                    <option value="onnx-community/gemma-3-270m-it-ONNX">gemma-3-270m-it-ONNX</option>
+                    <option value="onnx-community/Llama-3.2-1B-Instruct">Llama-3.2-1B-Instruct</option>
+                    <option value="Xenova/distilgpt2">distilgpt2</option>
+                </select>
             </label>
 
-            <div id="deviceStatus" class="text-gray-700 text-sm mb-2">Not loaded</div>
+            <button id="loadDeviceModelBtn"
+                    class="mt-4 w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">Load Model
+            </button>
 
-            <button id="loadDeviceModelBtn" class="mt-4 w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">Load Model</button>
+            <div id="deviceStatus" class="text-gray-700 text-sm my-4">Not loaded</div>
 
             <div id="deviceLoadingContainer" class="w-full max-w-xs my-2">
                 <div id="deviceLoadingBar" class="h-2 bg-green-500 transition-all duration-200 w-0"></div>
@@ -45,7 +60,8 @@
         <div class="bg-white p-6 rounded-2xl shadow-xl border border-gray-200">
             <h2 class="text-xl font-semibold mb-4">Request Pattern</h2>
 
-            <select id="patternSelect" class="w-full mb-4 px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
+            <select id="patternSelect"
+                    class="w-full mb-4 px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
                 <option value="once-per-sec">1 request / sec</option>
                 <option value="every-ten-sec">Every 10 sec 1 request</option>
                 <option disabled value="batch-10-every-5s">(not implemented) Batch: 10 every 5s</option>
@@ -53,7 +69,8 @@
             </select>
 
             <label class="block mb-4 text-sm font-medium">Route strategy
-                <select id="routeStrategy" class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
+                <select id="routeStrategy"
+                        class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
                     <option value="always_cloud">Always cloud</option>
                     <option value="roundrobin">Round Robin</option>
                     <option value="probabilistic">Probabilistic (p to cloud)</option>
@@ -62,11 +79,14 @@
             </label>
 
             <label class="block mb-4 text-sm font-medium">Cloud probability (for probabilistic)
-                <input id="cloudProb" type="number" min="0" max="1" step="0.1" value="0.5" class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none" />
+                <input id="cloudProb" type="number" min="0" max="1" step="0.1" value="0.5"
+                       class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none"/>
             </label>
 
             <div class="flex gap-3 mt-4">
-                <button id="startBtn" class="flex-1 bg-green-600 text-white py-2 rounded-lg hover:bg-green-700 transition">Start</button>
+                <button id="startBtn"
+                        class="flex-1 bg-green-600 text-white py-2 rounded-lg hover:bg-green-700 transition">Start
+                </button>
                 <button id="stopBtn" disabled class="flex-1 bg-gray-400 text-white py-2 rounded-lg">Stop</button>
             </div>
         </div>
@@ -76,7 +96,10 @@
             <h2 class="text-xl font-semibold mb-4">Live Log & Results</h2>
             <div id="log" class="h-64 overflow-auto bg-gray-50 p-3 rounded-lg border border-gray-200 text-sm"></div>
             <div id="stats" class="mt-4 text-sm text-gray-800"></div>
-            <button id="downloadStats" class="mt-4 w-full bg-purple-600 text-white py-2 rounded-lg hover:bg-purple-700 transition">Download Statistics</button>
+            <button id="downloadStats"
+                    class="mt-4 w-full bg-purple-600 text-white py-2 rounded-lg hover:bg-purple-700 transition">Download
+                Statistics
+            </button>
         </div>
     </section>
 </main>
