fix: correct shown device stats and add message template to on device service

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                         <th class="text-left">Route</th>
                         <th class="text-left">Latency (ms)</th>
                         <th class="text-left">Question</th>
+                        <th class="text-left">Answer</th>
                         <th class="text-left">Correct</th>
                     </tr>
                     </thead>
