feat: add authorship to footnote

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <main class="max-w-6xl mx-auto p-6">
     <h1 class="text-3xl font-bold mb-6 text-center">Browser LLM Evaluation</h1>
     <p class="mb-6 text-gray-700 text-center">
-        This project explores how in-browser LLM inference behafes compared to cloud-based inference in terms of latency.
-        The goal is to modle different request incoming patterns and routing strategies between cloud and on-device models.
+        This project explores how in-browser LLM inference behafes compared to cloud-based inference in terms of
+        latency.
+        The goal is to modle different request incoming patterns and routing strategies between cloud and on-device
+        models.
         For the prompts and evaluation of the accuracy the BooIQ dataset is used.
-        The project is currently under development and does not aim to provide accurate LLM responses, but rather to measure performance differences.
+        The project is currently under development and does not aim to provide accurate LLM responses, but rather to
+        measure performance differences.
         To run the cloud based inference, you need to bring your own OpenRouter API key.
     </p>
 
@@ -142,6 +145,14 @@
 
         </div>
     </section>
+
+    <footer class="mt-12 text-center text-gray-600 text-sm">
+        <p>Developed by
+            <a href="https://www.linkedin.com/in/fabian-h%C3%BCni/" class="text-blue-500 hover:underline">Fabian Hüni</a>,
+            <a href="https://www.linkedin.com/in/philip-kehl/" class="text-blue-500 hover:underline">Philip Kehl</a> and
+            <a href="https://www.linkedin.com/in/nicolas-wyss-6b172428b/" class="text-blue-500 hover:underline">Nicolas Wyss</a>.
+        </p>
+    </footer>
 </main>
 
 <script type="module" src="./src/main.js"></script>
