--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                         class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
                     <option value="once-per-sec">1 request / sec</option>
                     <option value="every-ten-sec">Every 10 sec 1 request</option>
-                    <option disabled value="batch-10-every-5s">(not implemented) Batch: 10 every 5s</option>
-                    <option disabled value="burst">(not implemented) Burst: 50 then idle</option>
+                    <option value="exponential-arrival">Exponential arrival time</option>
                 </select>
             </label>
 
@@ -101,6 +100,10 @@
             <label class="block mb-4 text-sm font-medium">Cloud probability (for probabilistic)
                 <input id="cloudProb" type="number" min="0" max="1" step="0.1" value="0.5"
                        class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none"/>
+            </label>
+
+            <label class="block mb-4 text-sm font-medium">Interarrival Time Lambda (for exponential arrival)
+                <input id="interArrivalTimeLambda" type="number" min="0" step="0.1" value="2" class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none"/>
             </label>
 
             <div class="flex gap-3 mt-4">
