feat: track queueing time, inference time, and total latency separately. the timestamp for start inference should be taken somewhere else

--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
                     <tr>
                         <th class="text-left">Timestamp</th>
                         <th class="text-left">Route</th>
-                        <th class="text-left">Latency (ms)</th>
+                        <th class="text-left">Total Latency (ms)</th>
+                        <th class="text-left">Queue (ms)</th>
+                        <th class="text-left">Inference (ms)</th>
                         <th class="text-left">Question</th>
                         <th class="text-left">Answer</th>
                         <th class="text-left">Correct</th>
