--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                         class="flex-1 bg-green-600 text-white py-2 rounded-lg hover:bg-green-700 transition">Start
                 </button>
                 <button id="stopBtn" disabled class="flex-1 bg-gray-400 text-white py-2 rounded-lg">Stop</button>
+                <button id="start1000Btn"
+                        class="flex-1 bg-purple-600 text-white py-2 rounded-lg hover:bg-purple-700 transition">Start 1000
+                </button>
             </div>
         </div>
 
