feat: add qwen 3 4B to cloud model selection

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <option value="google/gemma-3n-e2b-it:free">google/gemma-3n-e2b-it:free</option>
                     <option value="meta-llama/llama-3.2-1b-instruct">meta-llama/llama-3.2-1b-instruct</option>
                     <option value="meta-llama/llama-3.2-3b-instruct">meta-llama/llama-3.2-3b-instruct</option>
+                    <option value="qwen/qwen3-4b:free">qwen/qwen3-4b</option>
                 </select>
             </label>
 
