feat: wait until all items of experiment are run to download stats, split downloads in stats and raw data

--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
             </label>
 
             <div class="flex gap-3 mt-4">
-                <button id="startBtn"
-                        class="flex-1 bg-green-600 text-white py-2 rounded-lg hover:bg-green-700 transition">Start
+                <button id="startBtn" class="flex-1 bg-green-600 text-white py-2 rounded-lg hover:bg-green-700 transition">
+                    Start
                 </button>
                 <button id="stopBtn" disabled class="flex-1 bg-gray-400 text-white py-2 rounded-lg">Stop</button>
-                <button id="start1000Btn"
-                        class="flex-1 bg-purple-600 text-white py-2 rounded-lg hover:bg-purple-700 transition">Start 1000
+                <button id="start1000Btn" class="flex-1 bg-purple-600 text-white py-2 rounded-lg hover:bg-purple-700 transition">
+                    Start 1000
                 </button>
             </div>
         </div>
