feat: add dataset item id to logs and csv result exports

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
                        class="w-full h-64 overflow-scroll bg-gray-50 p-3 rounded-lg border border-gray-200 text-sm">
                     <thead>
                     <tr>
-                        <th class="text-left">Timestamp</th>
+                        <th class="text-left">ID</th>
+                        <th class="text-left">Time</th>
                         <th class="text-left">Route</th>
                         <th class="text-left">Total Latency (ms)</th>
                         <th class="text-left">Queue (ms)</th>
