feat: open linkedin links in new tab

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
 
     <footer class="mt-12 text-center text-gray-600 text-sm">
         <p>Developed by
-            <a href="https://www.linkedin.com/in/fabian-h%C3%BCni/" class="text-blue-500 hover:underline">Fabian Hüni</a>,
-            <a href="https://www.linkedin.com/in/philip-kehl/" class="text-blue-500 hover:underline">Philip Kehl</a> and
-            <a href="https://www.linkedin.com/in/nicolas-wyss-6b172428b/" class="text-blue-500 hover:underline">Nicolas Wyss</a>.
+            <a href="https://www.linkedin.com/in/fabian-h%C3%BCni/" target="_blank" class="text-blue-500 hover:underline">Fabian Hüni</a>,
+            <a href="https://www.linkedin.com/in/philip-kehl/" target="_blank" class="text-blue-500 hover:underline">Philip Kehl</a> and
+            <a href="https://www.linkedin.com/in/nicolas-wyss-6b172428b/" target="_blank" class="text-blue-500 hover:underline">Nicolas Wyss</a>.
         </p>
     </footer>
 </main>
