--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <main class="max-w-6xl mx-auto p-6">
     <h1 class="text-3xl font-bold mb-6 text-center">Browser LLM Evaluation</h1>
     <p class="mb-6 text-gray-700 text-center">
-        This project explores how in-browser LLM inference behafes compared to cloud-based inference in terms of
+        This project explores how in-browser LLM inference behaves compared to cloud-based inference in terms of
         latency.
         The goal is to modle different request incoming patterns and routing strategies between cloud and on-device
         models.
