fix: typo in description

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <main class="max-w-6xl mx-auto p-6">
     <h1 class="text-3xl font-bold mb-6 text-center">Browser LLM Evaluation</h1>
     <p class="mb-6 text-gray-700 text-center">
-        This project explores how in-browser LLM inference behafes compared to cloud-based inference in terms of
+        This project explores how in-browser LLM inference behaves compared to cloud-based inference in terms of
         latency.
-        The goal is to modle different request incoming patterns and routing strategies between cloud and on-device
+        The goal is to model different request incoming patterns and routing strategies between cloud and on-device
         models.
-        For the prompts and evaluation of the accuracy the BooIQ dataset is used.
+        For the prompts and evaluation of the accuracy the <a href="https://huggingface.co/datasets/google/boolq" target="_blank">BooIQ</a> dataset is used.
         The project is currently under development and does not aim to provide accurate LLM responses, but rather to
         measure performance differences.
         To run the cloud based inference, you need to bring your own OpenRouter API key.
