feat: added jseq scheduler to javascript app

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <option value="always_cloud">Always cloud</option>
                     <option value="roundrobin">Round Robin</option>
                     <option value="probabilistic">Probabilistic (p to cloud)</option>
+                    <option value="jseq">JSEQ (Stateful)</option>
                 </select>
             </label>
 
